--- a/src/stylesheets/list.css
+++ b/src/stylesheets/list.css
@@ -4,8 +4,8 @@
   padding: 10px;
   border-radius: 4px;
   border: 2px solid #333;
-  flex-grow: 1;
-  flex-basis: 0;
+  width: 200px;
+  flex-shrink: 0;
 }
 
 .List__title {
